Quantidade, valor investido, valor atual, lucro

--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
@@ -69,12 +69,11 @@
         {
             <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
         }
-        <br />
     </div>
-
+    <br />
     <h2>Não investido: R$ @saldoSemInvestimento</h2>
     <h2>Saldo Total na Conta: R$ @dinheiroTotalContaRS</h2><br />
-    <h2>Investimento Atual:</h2><br />
+    <h2>Investimento Atual</h2>
     if (bitcoinInvestimento > 0)
     {
         <hr />
