--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
@@ -6,15 +6,21 @@
     var bitcoinValorReal = ViewBag.QuantidadaEmRealBitcoin;
     var bitcoinInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoBitcoin);
     var lucroOuPerda = Convert.ToDouble(ViewBag.LucroOuPerda);
+
+    var diasList = ViewBag.Ultimos7Dias;
+    var dias = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(diasList)); 
+    var valores7Dias = ViewBag.ValorBitcoin7Dias;
+    var valores = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(valores7Dias));
 }
 
 <h1>@ViewData["Title"]</h1>
 
-
 <hr />
+
 <h3>Quantidade de Bitcoin: @bitcoinQuantidade</h3>
 <h3>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h3>
 <h3>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h3>
+
 @if (lucroOuPerda > 0)
 {
     <h3>Lucro: R$ @lucroOuPerda</h3>
@@ -23,3 +29,47 @@ else
 {
     <h3>Perda: R$ @lucroOuPerda</h3>
 }
+
+<br />
+
+<canvas id="graficoBitcoin" width="400" height="150">
+</canvas>
+
+@section Scripts {
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+    <script>
+        $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoBitcoin').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: @dias,
+                        datasets: [{
+                            data: @valores,
+                            backgroundColor: 'rgba(250, 150, 26, 0.0)',
+                            borderColor: 'rgba(250, 150, 26, 1)',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        legend: {
+                            display: false
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+    </script>
+
+
+    }
