Correção XRP no Index - View

--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
@@ -12,7 +12,7 @@
     var bitcoinCashValorReal = ViewBag.QuantidadaEmRealBitcoinCash;
     var bitcoinCashInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoBitcoinCash);
 
-    var xrpQuantidade = ViewBag.QuantidadaTotalBitcoinCash;
+    var xrpQuantidade = ViewBag.QuantidadaTotalXrp;
     var xrpValorReal = ViewBag.QuantidadaEmRealXrp;
     var xrpInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoXrp);
 
