--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Bitcoin.cshtml
@@ -18,6 +18,13 @@
     var xrpInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoXrp);
     var paxGoldInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoPaxGold);
     var litecoinInvestimento = Convert.ToDouble(ViewBag.ValorInvestidoLitecoin);
+
+    //adm
+    var bitcoinTotal = ViewBag.Ultimos7DiasAdm;
+    var bitcoinTotalAdm = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(bitcoinTotal));
+    var admBitcoinTotal = ViewBag.Bitcoin;
+    var BitcoinValorRS = ViewBag.BitcoinValorRS;
+    var BitcoinInvestido = ViewBag.BitcoinInvestido;
 }
 
 <div class="flex-row">
@@ -53,28 +60,30 @@
 
 <hr />
 
-<h5>Quantidade de Bitcoin: @bitcoinQuantidade</h5>
-<h5>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h5>
-<h5>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h5>
-
-@if (lucroOuPerda > 0)
+@if (!User.IsInRole("Admin"))
 {
-    <h5>Lucro: R$ @lucroOuPerda</h5>
-}
-else
-{
-    <h5>Perda: R$ @lucroOuPerda</h5>
-}
+    <h5>Quantidade de Bitcoin: @bitcoinQuantidade</h5>
+    <h5>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h5>
+    <h5>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h5>
 
-<br />
+    @if (lucroOuPerda > 0)
+    {
+        <h5>Lucro: R$ @lucroOuPerda</h5>
+    }
+    else
+    {
+        <h5>Perda: R$ @lucroOuPerda</h5>
+    }
 
-<canvas id="graficoBitcoin" width="400" height="150">
-</canvas>
+    <br />
 
-@section Scripts {
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <canvas id="graficoBitcoin" width="400" height="150">
+    </canvas>
 
-    <script>
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+        <script>
         $(document)
             .ready(function () {
 
@@ -105,7 +114,56 @@ else
                 });
 
             });
-    </script>
-
+        </script>
 
     }
+}
+else
+{
+    <h5>Quantidade de Bitcoin: @admBitcoinTotal</h5>
+    <h5>Valor Investido - Bitcoin: R$ @BitcoinInvestido</h5>
+    <h5>Valor Atual - Bitcoin: R$ @BitcoinValorRS</h5>
+
+    <br />
+
+    <canvas id="graficoBitcoin" width="400" height="150">
+    </canvas>
+
+    @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+        <script>
+        $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoBitcoin').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: @dias,
+                        datasets: [{
+                            data: @bitcoinTotalAdm,
+                            backgroundColor: 'rgba(250, 150, 26, 0.0)',
+                            borderColor: 'rgba(250, 150, 26, 1)',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        legend: {
+                            display: false
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+        </script>
+
+    }
+}
