--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/BitcoinCash.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/BitcoinCash.cshtml
@@ -24,6 +24,9 @@
     var admBitcoinCashTotal = ViewBag.BitcoinCash;
     var BitcoinCashValorRS = ViewBag.BitcoinCashValorRS;
     var BitcoinCashInvestido = ViewBag.BitcoinCashInvestido;
+
+    var lucroOuPerdaAdm = Convert.ToDouble(ViewBag.LucroOuPerdaAdm);
+
 }
 
 @if (!User.IsInRole("Admin"))
@@ -133,7 +136,18 @@ else
     <h5>Quantidade de Bitcoin Cash: @admBitcoinCashTotal</h5>
     <h5>Valor Investido - Bitcoin Cash: R$ @BitcoinCashInvestido</h5>
     <h5>Valor Atual - Bitcoin Cash: R$ @BitcoinCashValorRS</h5>
-
+    @if (lucroOuPerdaAdm > 0)
+    {
+        <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
+    }
+    else
+    {
+        if (lucroOuPerdaAdm < 0)
+        {
+            lucroOuPerdaAdm = lucroOuPerdaAdm * (-1);
+        }
+        <h5>Perda: R$ @lucroOuPerdaAdm</h5>
+    }
     <br />
 
     <canvas id="graficoBitcoinCash" width="400" height="150">
