--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
@@ -24,65 +24,66 @@
     var admEthereumTotal = ViewBag.Ethereum;
     var EthereumValorRS = ViewBag.EthereumValorRS;
     var EthereumInvestido = ViewBag.EthereumInvestido;
+
+    var lucroOuPerdaAdm = Convert.ToDouble(ViewBag.LucroOuPerdaAdm);
 }
-
-@if (!User.IsInRole("Admin"))
-{
-    <div class="flex-row">
-
-        <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
-        @if (bitcoinInvestimento > 0)
-        {
-            <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
-        }
-        @if (ethereumInvestimento > 0)
-        {
-            <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
-        }
-        @if (bitcoinCashInvestimento > 0)
-        {
-            <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
-        }
-        @if (xrpInvestimento > 0)
-        {
-            <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
-        }
-        @if (paxGoldInvestimento > 0)
-        {
-            <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
-        }
-        @if (litecoinInvestimento > 0)
-        {
-            <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
-        }
-    </div>
-    <br />
-    <h1 class="text-center">@ViewData["Title"]</h1>
-
-    <hr />
-
-    <h5>Quantidade de Ethereum: @ethereumQuantidade</h5>
-    <h5>Valor Investido - Ethereum: R$ @ethereumInvestimento</h5>
-    <h5>Valor Atual - Ethereum: R$ @ethereumValorReal</h5>
-
-    @if (lucroOuPerda > 0)
+    @if (!User.IsInRole("Admin"))
     {
-        <h5>Lucro: R$ @lucroOuPerda</h5>
-    }
-    else
-    {
-        <h5>Perda: R$ @lucroOuPerda</h5>
-    }
+        <div class="flex-row">
 
-    <br />
+            <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
+            @if (bitcoinInvestimento > 0)
+            {
+                <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+            }
+            @if (ethereumInvestimento > 0)
+            {
+                <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
+            }
+            @if (bitcoinCashInvestimento > 0)
+            {
+                <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
+            }
+            @if (xrpInvestimento > 0)
+            {
+                <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
+            }
+            @if (paxGoldInvestimento > 0)
+            {
+                <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+            }
+            @if (litecoinInvestimento > 0)
+            {
+                <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
+            }
+        </div>
+        <br />
+        <h1 class="text-center">@ViewData["Title"]</h1>
 
-    <canvas id="graficoEthereum" width="400" height="150">
-    </canvas>
+        <hr />
 
-    @section Scripts {
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+        <h5>Quantidade de Ethereum: @ethereumQuantidade</h5>
+        <h5>Valor Investido - Ethereum: R$ @ethereumInvestimento</h5>
+        <h5>Valor Atual - Ethereum: R$ @ethereumValorReal</h5>
 
-        <script>
+        @if (lucroOuPerda > 0)
+        {
+            <h5>Lucro: R$ @lucroOuPerda</h5>
+        }
+        else
+        {
+            <h5>Perda: R$ @lucroOuPerda</h5>
+        }
+
+        <br />
+
+        <canvas id="graficoEthereum" width="400" height="150">
+        </canvas>
+
+        @section Scripts {
+            <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+            <script>
         $(document)
             .ready(function () {
 
@@ -113,37 +114,48 @@
                 });
 
             });
-        </script>
+            </script>
 
+        }
     }
-}
-else
-{
-    <div class="flex-row">
-        <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
-        <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
-        <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
-        <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
-        <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
-        <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
-        <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
-    </div>
-    <br />
-    <h1 class="text-center">@ViewData["Title"]</h1>
-    <br />
-    <h5>Quantidade de Ethereum: @admEthereumTotal</h5>
-    <h5>Valor Investido - Ethereum: R$ @EthereumInvestido</h5>
-    <h5>Valor Atual - Ethereum: R$ @EthereumValorRS</h5>
+    else
+    {
+        <div class="flex-row">
+            <a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
+            <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+            <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
+            <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
+            <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
+            <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+            <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
+        </div>
+        <br />
+        <h1 class="text-center">@ViewData["Title"]</h1>
+        <br />
+        <h5>Quantidade de Ethereum: @admEthereumTotal</h5>
+        <h5>Valor Investido - Ethereum: R$ @EthereumInvestido</h5>
+        <h5>Valor Atual - Ethereum: R$ @EthereumValorRS</h5>
+        @if (lucroOuPerdaAdm > 0)
+        {
+            <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
+        }
+        else
+        {
+            if (lucroOuPerdaAdm < 0)
+            {
+                lucroOuPerdaAdm = lucroOuPerdaAdm * (-1);
+            }
+            <h5>Perda: R$ @lucroOuPerdaAdm</h5>
+        }
+        <br />
 
-    <br />
+        <canvas id="graficoEhtereum" width="400" height="150">
+        </canvas>
 
-    <canvas id="graficoEhtereum" width="400" height="150">
-    </canvas>
+        @section Scripts {
+            <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-    @section Scripts {
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-
-        <script>
+            <script>
         $(document)
             .ready(function () {
 
@@ -174,7 +186,7 @@ else
                 });
 
             });
-        </script>
+            </script>
 
+        }
     }
-}
