Traduzindo páginas do Identity

--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/PaxGold.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/PaxGold.cshtml
@@ -73,6 +73,10 @@
     }
     else
     {
+        if (lucroOuPerda < 0)
+        {
+            lucroOuPerda = lucroOuPerda * (-1);
+        }
         <h5>Perda: R$ @lucroOuPerda</h5>
     }
 
