--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
@@ -72,6 +72,10 @@
         }
         else
         {
+            if (lucroOuPerda < 0)
+            {
+                lucroOuPerda = lucroOuPerda * (-1);
+            }
             <h5>Perda: R$ @lucroOuPerda</h5>
         }
 
