Alteração ApplicationUser -> IdentityUser

--- a/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,10 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirmar e-mail";
+    ViewData["Title"] = "Conta confirmada";
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<br />
+<h4>Realize o login.</h4>
