--- a/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model EmailModel
 @{
-    ViewData["Title"] = "Manage Email";
+    ViewData["Title"] = "Gerenciar e-mail";
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
