--- a/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Gerenciar seu login externo";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
 
@@ -22,7 +22,7 @@
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remover</button>
                                 </div>
                             </form>
                         }
