--- a/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -10,14 +10,14 @@
 <div class="row">
     <div class="col-md-6">
         <p>
-            Sua conta contém dados pessoais que você nos forneceu. Esta página permite que você baixe ou exclua esses dados.
+            Sua conta contém dados pessoais que você nos forneceu. Esta página permite que você exclua esses dados.
         </p>
         <p>
-            <strong>Excluir esses dados removerá permanentemente sua conta.</strong>
+            <strong>Excluir esses dados removerá sua conta.</strong>
         </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
+        @*<form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
             <button class="btn btn-primary" type="submit">Download</button>
-        </form>
+        </form>*@
         <p>
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Deletar</a>
         </p>
